[package]
name = "connect"
version = "0.1.0"
authors = ["Eitan Yarmush <eitan.yarmush@solo.io>"]
edition = "2021"

[dependencies]
anyhow = "1.0"
libbpf-rs = "0.19.1"
libc = "0.2"
plain = "0.2"
time = { version = "0.3", features = ["formatting", "local-offset", "macros"]}
clap = { version = "3.1", default-features = false, features = ["std", "derive"] }

[build-dependencies]
libbpf-cargo = "0.13.1"
